--- a/public/app.css
+++ b/public/app.css
@@ -10,16 +10,20 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 80vh;
+}
+
+h2, p {
+    padding: 10px;
 }
 
 .container{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
-    margin: auto;
     height: 50vh;
+    margin-top: 10px;
     padding: 20px;
     border-radius: 1rem;
     background-color: #e3e3ee;
