--- a/public/app.css
+++ b/public/app.css
@@ -5,13 +5,10 @@
 }
 
 body{
-    width: 50%;
-    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 80vh;
 }
 
 h2, p {
@@ -21,12 +18,20 @@ h2, p {
 .container{
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 50vh;
+    justify-content: left;
     margin-top: 10px;
-    padding: 20px;
+    width: 50%;
+    padding: 2rem;
     border-radius: 1rem;
     background-color: #e3e3ee;
+}
+
+.container form{
+    width: 100%;
+}
+
+.container label{
+    color: rgb(6, 86, 92);
 }
 
 input{
@@ -39,7 +44,7 @@ input{
     border-radius: 0.5rem;
 }
 
-input:focus, textarea:focus{
+input:focus{
     outline-color: aqua;
     outline-offset: 3px;
 }
@@ -63,12 +68,4 @@ button:hover{
 button:active{
     outline: aqua;
     outline-offset: 4px;
-}
-
-textarea{
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
-    background-color: transparent;
-    border-radius: 0.5rem;
 }
